Fixed the alignment of the inner circles of the timeline UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,10 @@ body {
 .text-primary {
   color: white;
 }
-
 /* .left{
-  left: -100px ;
+left: 1%
+}
+
+.right{
+  right: 1%
 } */
